--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ li {
     display: block;
     margin: 0 auto;
     padding: 20px;
-    width: 100%;
+    width: 70%; /* Reduced width */;
 }
 
 .video-container {
@@ -88,7 +88,7 @@ li {
 }
 
 .video-container video {
-    width: 50%; /* Reduced width */
+    width: 70%; /* Reduced width */
     height: auto;
     transition: transform 0.5s ease-in-out;
 }
