--- a/index.html
+++ b/index.html
@@ -98,52 +98,54 @@ html {
     scroll-behavior: smooth;
 }
 
-                /* Menu icon and box styles */
+/* Menu icon and box styles */
 .menu-box {
     width: 200px;
     background: #333;
-    position: absolute; /* Change position to absolute */
-    top: 70px; /* Adjust top position to align with the menu icon */
-    left: 20px; /* Adjust left position to align with the menu icon */
-    display: none; /* Initially hidden */
+    position: absolute;
+    top: 70px;
+    left: 20px;
+    display: none;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-    z-index: 999; /* Ensure it's above other elements */
+    z-index: 999;
 }
 
 .menu-icon {
     width: 40px;
-    position: fixed; /* Keep position fixed */
+    position: fixed;
     top: 20px;
     left: 20px;
     cursor: pointer;
-    z-index: 999; /* Ensure it's above other elements */
+    z-index: 999;
 }
 
-        .menu-box.show {
-            display: block; /* Show menu box when toggled */
-        }
+.menu-box.show {
+    display: block;
+}
 
-        .right-links {
-            padding: 10px;
-        }
+.right-links {
+    padding: 10px;
+}
 
-        .right-links a {
-            display: block;
-            color: #fff;
-            text-decoration: none;
-            padding: 5px 0;
-            text-align: center;
-        }
+.right-links a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 0;
+    text-align: center;
+}
 
-        .right-links a:hover {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 5px;
-        }
-        .menu-icon img {
-            width: 30px; /* Adjust the width to your desired size */
-            height: auto; /* Maintain aspect ratio */
-        }
+.right-links a:hover {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+}
+
+.menu-icon img {
+    width: 30px;
+    height: auto;
+}
+
 </style>
 </head>
 <body>
