--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ html {
 .menu-box {
     width: 200px;
     background: #333;
-    position: absolute;
+    position: fixed;
     top: 70px;
-    left: 20px;
+    right: 20px;
     display: none;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
@@ -112,10 +112,10 @@ html {
 }
 
 .menu-icon {
-    width: 40px;
+    width: 30px;
     position: fixed;
     top: 20px;
-    left: 20px;
+    right: 20px;
     cursor: pointer;
     z-index: 999;
 }
