--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ html {
 .menu-box {
     width: 200px;
     background: #333;
-    position: fixed;
+    position: absolute;
     top: 70px;
-    right: 20px;
+    right: 20px; /* Adjusted right position */
     display: none;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
@@ -112,10 +112,10 @@ html {
 }
 
 .menu-icon {
-    width: 30px;
+    width: 40px;
     position: fixed;
     top: 20px;
-    right: 20px;
+    right: 20px; /* Adjusted right position */
     cursor: pointer;
     z-index: 999;
 }
@@ -145,6 +145,7 @@ html {
     width: 30px;
     height: auto;
 }
+
 
 </style>
 </head>
