--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ html {
 .menu-box {
     width: 200px;
     background: #333;
-    position: absolute;
+    position: fixed;
     top: 70px;
     right: 20px; /* Adjusted right position */
     display: none;
@@ -112,7 +112,7 @@ html {
 }
 
 .menu-icon {
-    width: 40px;
+    width: 33px;
     position: fixed;
     top: 20px;
     right: 20px; /* Adjusted right position */
