--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ html {
     background: #333;
     position: fixed;
     top: 70px;
-    right: 20px; /* Adjusted right position */
+    left: 20px; /* Adjusted right position */
     display: none;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
@@ -115,7 +115,7 @@ html {
     width: 33px;
     position: fixed;
     top: 20px;
-    right: 20px; /* Adjusted right position */
+    left: 20px; /* Adjusted right position */
     cursor: pointer;
     z-index: 999;
 }
