--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@ html {
         <div class="menu-icon" onclick="toggleMenu()">
             <img src="menu.png" alt="Menu Icon">
         </div>
+                <div class="home-icon">
+        <img src="home.png" alt="Home">
+    </div>
         <!-- Menu Box -->
         <div class="menu-box" id="menu">
             <div class="right-links">
@@ -364,7 +367,10 @@ videos.forEach(video => {
     // Mute the video
     video.muted = true;
 });
-
+function goHome() {
+    // Redirect to home page
+    window.location.href = "https://savvyk05.github.io/";
+}
     </script>
     <!-- Add more sections if needed -->
 </body>
