--- a/index.html
+++ b/index.html
@@ -111,11 +111,19 @@ html {
     z-index: 999;
 }
 
-.menu-icon, .home-icon {
+.menu-icon {
     width: 40px;
     position: fixed;
     top: 20px;
     left: 20px; /* Adjusted left position */
+    cursor: pointer;
+    z-index: 999;
+}
+.home-icon {
+    width: 40px;
+    position: fixed;
+    top: 20px;
+    left: 80px; /* Adjusted left position */
     cursor: pointer;
     z-index: 999;
 }
