--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ videos.forEach(video => {
 });
 function goHome() {
     // Redirect to home page
-    window.location.href = "https://savvyk05.github.io/";
+    window.location.href = "/";
 }
     </script>
     <!-- Add more sections if needed -->
