--- a/index.html
+++ b/index.html
@@ -72,22 +72,25 @@ li {
 
 /* Video container styles */
 #project-video {
+    max-width: 800px
     border-radius: 10px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
     overflow: hidden;
     display: block;
-    margin: 0 auto;
+    margin: auto;
     padding: 20px;
     width: 40%; /* Reduced width */;
 }
 
 .video-container {
+    max-width: 800px
     position: relative;
     overflow: hidden;
     border-radius: 10px;
 }
 
 .video-container video {
+    max-width: 800px
     width: 30%; /* Reduced width */
     height: auto;
     transition: transform 0.5s ease-in-out;
