--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ html {
             <source src="project_results_video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p>Description of the project results showcased in the video.</p>
+        <p>Description of the project results is showcased in the video.</p>
     </section>
         <section id="project3">
     <div>
@@ -297,7 +297,10 @@ html {
         <h3>Project Results</h3>
     </section>
 <section id="project-steps" class="results-section">
-    <h2>Project Steps</h2>
+    <video id="project-steps-video" autoplay loop muted controls width="50%" height="auto" poster="project_steps_poster.jpg">
+            <source src="project_steps_video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     <p>STEP 1</p>
     <p>The code 1st converts a video into an audio file. Here is an example video used.</p>
     <div class="video-container">
@@ -310,17 +313,18 @@ html {
                 recognize_google tag.</p>
         <p>Then it uses OpenAI API to send a prompt along with the complete extracted text compiled from the chunks,
             which is returned back in the form of an output.</p>
-    <video id="project-step-2-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_2_poster.jpg">
-        <source src="project_step_2_video.mp4" type="video/mp4">
+<!--    <video id="project-step-2-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_2_poster.jpg">-->
+<!--        <source src="project_step_2_video.mp4" type="video/mp4">-->
                 Your browser does not support the video tag.
-    </video>
+<!--    </video>-->
     <p>STEP 3</p>
     <p>The code finally outputs Minutes of Meeting as the prompt is specific to that. We can see an example output below:</p>
-    <video id="project-step-3-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_3_poster.jpg">
-        <source src="projectresult2.mp4" type="video/mp4">
+        <p></p>
+<!--    <video id="project-step-3-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_3_poster.jpg">-->
+<!--        <source src="projectresult2.mp4" type="video/mp4">-->
 
         Your browser does not support the video tag.
-    </video>
+<!--    </video>-->
     </div>
 </section>
 
