--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ html {
     background: #333;
     position: fixed;
     top: 70px;
-    left: 20px; /* Adjusted left position */
+    right: 120px; /* Adjusted left position */
     display: none;
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
@@ -118,7 +118,7 @@ html {
     width: 40px;
     position: fixed;
     top: 20px;
-    left: 20px; /* Adjusted left position */
+    right: 120px; /* Adjusted left position */
     cursor: pointer;
     z-index: 999;
 }
@@ -126,7 +126,7 @@ html {
     width: 40px;
     position: fixed;
     top: 20px;
-    left: 80px; /* Adjusted left position */
+    right: 80px; /* Adjusted left position */
     cursor: pointer;
     z-index: 999;
 }
