--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@ html {
             <img src="stevens-logo.jpg" alt="Stevens Logo" class="company-logo">
             <h3>Stevens Institute of Technology</h3>
             <p>Master of Engineering - MEng, Engineering/Industrial Management · (September 2022 - May 2024)</p>
+            <img src="manipal.png" alt="Manipal Logo" class="company-logo">
             <h3>Manipal Institute of Technology</h3>
             <p>BTech - Bachelor of Technology, Electrical, Electronics and Communications Engineering · (2014 - 2018)</p>
         </section>
