--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ html {
     <p>The code 1st converts a video into an audio file. Here is an example video used.</p>
     <div class="video-container">
         <video id="project-step-1-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_1_poster.jpg">
-            <source src="project_step_1_video.mp4" type="video/mp4">
+            <source src="project_step_1_video.mov" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     <p>STEP 2</p>
