--- a/index.html
+++ b/index.html
@@ -322,23 +322,23 @@ html {
 <!--    </video>-->
     <p>STEP 3</p>
     <p>The code finally outputs Minutes of Meeting as the prompt is specific to that. We can see an example output below:</p>
-        <p>Minutes of Meeting
-Date: April 11, 20XX
-Time: 2:14 p.m.
-Location: Virtual Meeting
-
-Participants:
-- Shashank Khanna
-- [Other participants' names]
-
-The meeting was called to order at 2:14 p.m. by Shashank Khanna.
-
-Shashank Khanna informed the group that he would like to test their ability to open a text removal of extraction from video. The current date and time were recorded as April 11, 20XX at 2:14 p.m. Shashank also introduced himself as the facilitator of the meeting.
-
-There were no objections or additions to the agenda. The meeting was adjourned at [insert time] by Shashank Khanna.
-
-Prepared by:
-[Your Name]</p>
+        <p>Minutes of Meeting</p>
+<p>Date: April 11, 20XX</p>
+<p>Time: 2:14 p.m.</p>
+<p>Location: Virtual Meeting</p>
+<p></p>
+<p>Participants:</p>
+<p>- Shashank Khanna</p>
+<p>- [Other participants' names]</p>
+<p></p>
+<p>The meeting was called to order at 2:14 p.m. by Shashank Khanna.</p>
+<p></p>
+<p>Shashank Khanna informed the group that he would like to test their ability to open a text removal of extraction from video. The current date and time were recorded as April 11, 20XX at 2:14 p.m. Shashank also introduced himself as the facilitator of the meeting.</p>
+<p></p>
+<p>There were no objections or additions to the agenda. The meeting was adjourned at [insert time] by Shashank Khanna.</p>
+<p></p>
+<p>Prepared by:</p>
+<p>[Your Name]</p></p>
 <!--    <video id="project-step-3-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_3_poster.jpg">-->
 <!--        <source src="projectresult2.mp4" type="video/mp4">-->
 
