--- a/index.html
+++ b/index.html
@@ -304,23 +304,23 @@ html {
             <source src="project_steps_video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-    <p>STEP 1</p>
+    <h4>STEP 1</h4>
     <p>The code 1st converts a video into an audio file. Here is an example video used.</p>
     <div class="video-container">
         <video id="project-step-1-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_1_poster.jpg">
             <source src="project_step_1_video.mov" type="video/mp4">
-            Your browser does not support the video tag.
+
         </video>
-    <p>STEP 2</p>
+    <h4>STEP 2</h4>
             <p>The code then converts audio into text by splitting the audio into chunks of 30 words each using the
                 recognize_google tag.</p>
         <p>Then it uses OpenAI API to send a prompt along with the complete extracted text compiled from the chunks,
             which is returned back in the form of an output.</p>
 <!--    <video id="project-step-2-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_2_poster.jpg">-->
 <!--        <source src="project_step_2_video.mp4" type="video/mp4">-->
-                Your browser does not support the video tag.
+
 <!--    </video>-->
-    <p>STEP 3</p>
+    <h4>STEP 3</h4>
     <p>The code finally outputs Minutes of Meeting as the prompt is specific to that. We can see an example output below:</p>
         <p>Minutes of Meeting</p>
 <p>Date: April 11, 20XX</p>
