--- a/index.html
+++ b/index.html
@@ -237,107 +237,107 @@ html {
 <p></p>
 <p>Prepared by:</p>
 <p>[Your Name]</p></p>
-    <div class="container">
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Mobile: 551-227-5645</p>
-            <p>Email: skhanna5@stevens.edu</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/shashank-khanna/">Shashank Khanna</a></p>
-        </section>
-        <section id="menu_about">
-        <!-- Menu Icon -->
-        <div class="menu-icon" onclick="toggleMenu()">
-            <img src="menu.png" alt="Menu Icon">
-        </div>
-            <div class="home-icon" onclick="goHome()">
-        <img src="home.png" alt="Home">
-    </div>
-        <!-- Menu Box -->
-        <div class="menu-box" id="menu">
-            <div class="right-links">
-                <a href="#project-results">Projects</a>
-                <a href="#skills">Top Skills</a>
-                <a href="#certifications">Certifications</a>
-                <a href="#summary">Summary</a>
-                <a href="#experience">Experience</a>
-                <a href="#education">Education</a>
-                <!-- Add more menu links as needed -->
-            </div>
-        </div>
-        </section>
-        <section id="skills">
-            <h2>Top Skills</h2>
-            <ul>
-                <li>Technical: Python, SQL, Tableau</li>
-                <li>Tools: Agile Project Management, MS Excel</li>
-                <li>Concepts: Decision-Making, Risk Management, Applied AI, Predictive Modeling & Forecasting</li>
-            </ul>
-        </section>
-        <section id="certifications">
-            <h2>Certifications</h2>
-            <ul>
-                <li>Data Exploration and Visualization for Risk and Decision Making - Graduate Certificate Program</li>
-                <li>Agile Project Management with Microsoft Project</li>
-                <li>Lean Six Sigma Foundations</li>
-            </ul>
-        </section>
-        <section id="summary">
-            <h2>Summary</h2>
-            <img src="your-photo.jpg" alt="Your Photo" class="company-logo">
-            <p>With a background in software engineering and data analysis, I am pursuing a Master of Engineering in Engineering/Industrial Management at Stevens Institute of Technology, where I am learning the fundamentals of business strategy, project management, and innovation. My goal is to become a technology leader who can bridge the gap between technical and business aspects of complex problems.</p>
-            <p>I am also an Impact Fellow at Global Governance Initiative, a global initiative that upskills individuals in various domains such as product management, management consulting, and impact investment, by engaging with industry professionals and practitioners. Through this program, I am developing critical problem-solving skills and gaining hands-on experience in tackling real-world challenges. Additionally, I am passionate about exploring emerging fields such as wearable technology, generative AI, and data analytics, and applying them to create innovative solutions. As the Secretary of the Business Intelligence and Analytics Club at Stevens, I collaborate with peers to organize events and activities that foster learning and networking opportunities. I am excited about the possibilities that lie ahead and am committed to making a meaningful impact in the ever-evolving landscape of technology.</p>
-        </section>
-        <section id="experience">
-            <h2>Experience</h2>
-            <img src="company-logo1.jpg" alt="Company Logo 1" class="company-logo">
-            <h3>Global Governance Initiative</h3>
-            <p>Impact Fellow</p>
-            <p>February 2024 - Present (3 months)</p>
-            <p>Among the top 5% of 15000+ applicants who are selected for the Global Governance Initiative Impact Fellowship program.</p>
-            <p>A 6-month global initiative that aims to upskill individuals in various domains like product management, management consulting, and impact investment, by engaging with industry professionals and practitioners.</p>
-            <p>Greater bent towards learning by doing and cultivation of critical problem-solving skills.</p>
-            <img src="stevens-logo.jpg" alt="Company Logo 2" class="company-logo">
-            <h3>Stevens Institute of Technology</h3>
-            <p>Graduate Student Assistant</p>
-            <p>September 2023 - Present (8 months)</p>
-            <p>Hoboken, New Jersey, United States</p>
-            <p>Working with the Development and Alumni Engagement Department with the following duties:</p>
-            <ul>
-                <li>Executes grant application management by organizing materials for faculty researchers and grant writers to draft five-and-six-figure proposals for scientific research and programs for underserved students, and prepare for submission.</li>
-                <li>Undertaking a materials management project, archiving 75+ year-old university and external documents for historical preservation and compliance with records management.</li>
-                <li>Responsible for contributing and managing proprietary lead and customer data in the university’s customer relations management software for department effectiveness.</li>
-            </ul>
+<!--    <div class="container">-->
+<!--        <section id="contact">-->
+<!--            <h2>Contact</h2>-->
+<!--            <p>Mobile: 551-227-5645</p>-->
+<!--            <p>Email: skhanna5@stevens.edu</p>-->
+<!--            <p>LinkedIn: <a href="https://www.linkedin.com/in/shashank-khanna/">Shashank Khanna</a></p>-->
+<!--        </section>-->
+<!--        <section id="menu_about">-->
+<!--        &lt;!&ndash; Menu Icon &ndash;&gt;-->
+<!--        <div class="menu-icon" onclick="toggleMenu()">-->
+<!--            <img src="menu.png" alt="Menu Icon">-->
+<!--        </div>-->
+<!--            <div class="home-icon" onclick="goHome()">-->
+<!--        <img src="home.png" alt="Home">-->
+<!--    </div>-->
+<!--        &lt;!&ndash; Menu Box &ndash;&gt;-->
+<!--        <div class="menu-box" id="menu">-->
+<!--            <div class="right-links">-->
+<!--                <a href="#project-results">Projects</a>-->
+<!--                <a href="#skills">Top Skills</a>-->
+<!--                <a href="#certifications">Certifications</a>-->
+<!--                <a href="#summary">Summary</a>-->
+<!--                <a href="#experience">Experience</a>-->
+<!--                <a href="#education">Education</a>-->
+<!--                &lt;!&ndash; Add more menu links as needed &ndash;&gt;-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        </section>-->
+<!--        <section id="skills">-->
+<!--            <h2>Top Skills</h2>-->
+<!--            <ul>-->
+<!--                <li>Technical: Python, SQL, Tableau</li>-->
+<!--                <li>Tools: Agile Project Management, MS Excel</li>-->
+<!--                <li>Concepts: Decision-Making, Risk Management, Applied AI, Predictive Modeling & Forecasting</li>-->
+<!--            </ul>-->
+<!--        </section>-->
+<!--        <section id="certifications">-->
+<!--            <h2>Certifications</h2>-->
+<!--            <ul>-->
+<!--                <li>Data Exploration and Visualization for Risk and Decision Making - Graduate Certificate Program</li>-->
+<!--                <li>Agile Project Management with Microsoft Project</li>-->
+<!--                <li>Lean Six Sigma Foundations</li>-->
+<!--            </ul>-->
+<!--        </section>-->
+<!--        <section id="summary">-->
+<!--            <h2>Summary</h2>-->
+<!--            <img src="your-photo.jpg" alt="Your Photo" class="company-logo">-->
+<!--            <p>With a background in software engineering and data analysis, I am pursuing a Master of Engineering in Engineering/Industrial Management at Stevens Institute of Technology, where I am learning the fundamentals of business strategy, project management, and innovation. My goal is to become a technology leader who can bridge the gap between technical and business aspects of complex problems.</p>-->
+<!--            <p>I am also an Impact Fellow at Global Governance Initiative, a global initiative that upskills individuals in various domains such as product management, management consulting, and impact investment, by engaging with industry professionals and practitioners. Through this program, I am developing critical problem-solving skills and gaining hands-on experience in tackling real-world challenges. Additionally, I am passionate about exploring emerging fields such as wearable technology, generative AI, and data analytics, and applying them to create innovative solutions. As the Secretary of the Business Intelligence and Analytics Club at Stevens, I collaborate with peers to organize events and activities that foster learning and networking opportunities. I am excited about the possibilities that lie ahead and am committed to making a meaningful impact in the ever-evolving landscape of technology.</p>-->
+<!--        </section>-->
+<!--        <section id="experience">-->
+<!--            <h2>Experience</h2>-->
+<!--            <img src="company-logo1.jpg" alt="Company Logo 1" class="company-logo">-->
+<!--            <h3>Global Governance Initiative</h3>-->
+<!--            <p>Impact Fellow</p>-->
+<!--            <p>February 2024 - Present (3 months)</p>-->
+<!--            <p>Among the top 5% of 15000+ applicants who are selected for the Global Governance Initiative Impact Fellowship program.</p>-->
+<!--            <p>A 6-month global initiative that aims to upskill individuals in various domains like product management, management consulting, and impact investment, by engaging with industry professionals and practitioners.</p>-->
+<!--            <p>Greater bent towards learning by doing and cultivation of critical problem-solving skills.</p>-->
+<!--            <img src="stevens-logo.jpg" alt="Company Logo 2" class="company-logo">-->
+<!--            <h3>Stevens Institute of Technology</h3>-->
+<!--            <p>Graduate Student Assistant</p>-->
+<!--            <p>September 2023 - Present (8 months)</p>-->
+<!--            <p>Hoboken, New Jersey, United States</p>-->
+<!--            <p>Working with the Development and Alumni Engagement Department with the following duties:</p>-->
+<!--            <ul>-->
+<!--                <li>Executes grant application management by organizing materials for faculty researchers and grant writers to draft five-and-six-figure proposals for scientific research and programs for underserved students, and prepare for submission.</li>-->
+<!--                <li>Undertaking a materials management project, archiving 75+ year-old university and external documents for historical preservation and compliance with records management.</li>-->
+<!--                <li>Responsible for contributing and managing proprietary lead and customer data in the university’s customer relations management software for department effectiveness.</li>-->
+<!--            </ul>-->
 
-            <img src="tresi-logo.jpg" alt="Tresi LLC." class="company-logo">
-            <h3>Supply Chain/ Business Operations Intern</h3>
-            <p>Tresi LLC., New York, NY, USA</p>
-            <p>06/2023 – 08/2023</p>
-            <ul>
-                <li>Utilized Tableau and Salesforce for a 55% efficiency boost and enhanced KPI tracking. Reduced order issues by 40% through data-driven operational monitoring. Raised $50,000 via diverse fundraising efforts demonstrating adept networking skills.</li>
-                <li>Managed a team of 7 logistics professionals and 5 operational staff, implementing strategic planning to optimize workflow.</li>
-            </ul>
+<!--            <img src="tresi-logo.jpg" alt="Tresi LLC." class="company-logo">-->
+<!--            <h3>Supply Chain/ Business Operations Intern</h3>-->
+<!--            <p>Tresi LLC., New York, NY, USA</p>-->
+<!--            <p>06/2023 – 08/2023</p>-->
+<!--            <ul>-->
+<!--                <li>Utilized Tableau and Salesforce for a 55% efficiency boost and enhanced KPI tracking. Reduced order issues by 40% through data-driven operational monitoring. Raised $50,000 via diverse fundraising efforts demonstrating adept networking skills.</li>-->
+<!--                <li>Managed a team of 7 logistics professionals and 5 operational staff, implementing strategic planning to optimize workflow.</li>-->
+<!--            </ul>-->
 
-            <img src="mphasis-logo.jpg" alt="Mphasis Ltd." class="company-logo">
-            <h3>Delivery Senior Software Engineer</h3>
-            <p>Mphasis Ltd., Mumbai, India</p>
-            <p>07/2018 – 07/2022</p>
-            <ul>
-                <li>Led strategic data analytics initiatives within supply chain ERP operations as part of the FedEx Critical Inventory Logistics Team, advising critical decision-making processes and ensuring project security. Travelled overseas for collaborative meetings.</li>
-                <li>Engineered innovative solutions to enhance the inventory system efficiency, resolving over 5000 support tickets through advanced SQL queries. Developed pricing strategies and created multiple reports for internal audit purposes.</li>
-                <li>Part of multiple dynamic teams to execute data quality improvements, and perform financial analysis by strategically assigning roles based on detailed individual strengths, resulting in a 40% reduction in software bugs and project delivery times.</li>
-                <li>Leveraged advanced SQL techniques for data analysis and optimization, architecting a 35% increase in project efficiency and code quality, showcasing not just technical proficiency but also a visionary approach to problem-solving and interface design.</li>
-            </ul>
-        </section>
-        <section id="education">
-            <h2>Education</h2>
-            <img src="stevens-logo.jpg" alt="Stevens Logo" class="company-logo">
-            <h3>Stevens Institute of Technology</h3>
-            <p>Master of Engineering - MEng, Engineering/Industrial Management · (September 2022 - May 2024)</p>
-            <img src="manipal.png" alt="Manipal Logo" class="company-logo">
-            <h3>Manipal Institute of Technology</h3>
-            <p>BTech - Bachelor of Technology, Electrical, Electronics and Communications Engineering · (2014 - 2018)</p>
-        </section>
-    </div>
+<!--            <img src="mphasis-logo.jpg" alt="Mphasis Ltd." class="company-logo">-->
+<!--            <h3>Delivery Senior Software Engineer</h3>-->
+<!--            <p>Mphasis Ltd., Mumbai, India</p>-->
+<!--            <p>07/2018 – 07/2022</p>-->
+<!--            <ul>-->
+<!--                <li>Led strategic data analytics initiatives within supply chain ERP operations as part of the FedEx Critical Inventory Logistics Team, advising critical decision-making processes and ensuring project security. Travelled overseas for collaborative meetings.</li>-->
+<!--                <li>Engineered innovative solutions to enhance the inventory system efficiency, resolving over 5000 support tickets through advanced SQL queries. Developed pricing strategies and created multiple reports for internal audit purposes.</li>-->
+<!--                <li>Part of multiple dynamic teams to execute data quality improvements, and perform financial analysis by strategically assigning roles based on detailed individual strengths, resulting in a 40% reduction in software bugs and project delivery times.</li>-->
+<!--                <li>Leveraged advanced SQL techniques for data analysis and optimization, architecting a 35% increase in project efficiency and code quality, showcasing not just technical proficiency but also a visionary approach to problem-solving and interface design.</li>-->
+<!--            </ul>-->
+<!--        </section>-->
+<!--        <section id="education">-->
+<!--            <h2>Education</h2>-->
+<!--            <img src="stevens-logo.jpg" alt="Stevens Logo" class="company-logo">-->
+<!--            <h3>Stevens Institute of Technology</h3>-->
+<!--            <p>Master of Engineering - MEng, Engineering/Industrial Management · (September 2022 - May 2024)</p>-->
+<!--            <img src="manipal.png" alt="Manipal Logo" class="company-logo">-->
+<!--            <h3>Manipal Institute of Technology</h3>-->
+<!--            <p>BTech - Bachelor of Technology, Electrical, Electronics and Communications Engineering · (2014 - 2018)</p>-->
+<!--        </section>-->
+<!--    </div>-->
 
 <!--    <video id="project-step-3-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_3_poster.jpg">-->
 <!--        <source src="projectresult2.mp4" type="video/mp4">-->
