--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ html {
     <header>
         <h1>Shashank Khanna</h1>
         <p>Business Intelligence Specialist | Data-driven Decision Maker</p>
-        <p>Graduate Student Assistant at Stevens Institute of Technology | ExMphasis</p>
+        <p>Recent Masters in Engineering Management Graduate from Stevens Institute of Technology</p>
         <p>Jersey City, New Jersey, United States</p>
     </header>
    <!-- Project Results - Video -->
