--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@ html {
         <p>Recent Masters in Engineering Management Graduate from Stevens Institute of Technology</p>
         <p>Jersey City, New Jersey, United States</p>
     </header>
+    <!-- Project Research Document -->
+    <section id="project-research">
+        <h2>Project Research - Farm-to-Table Platform</h2>
+        <p>The Farm-to-Table Platform is a groundbreaking initiative designed to revolutionize the agricultural and food distribution landscape in India. With a comprehensive approach aimed at addressing the challenges faced by farmers and enhancing food quality for consumers, the platform offers a holistic solution to bridge the gap between producers and consumers.</p>
+        <p><a href="https://www.councilonsustainabledevelopment.org/post/farm-to-table-empowering-farmers-enriching-tables-a-product-requirement-document" target="_blank">Read the full project research document</a></p>
+    </section>
    <!-- Project Results - Video -->
     <section id="project-results">
         <h2>Project - Shape Shooter Game</h2>
