--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ html {
     <header>
         <h1>Shashank Khanna</h1>
         <p>Business Intelligence Specialist | Data-driven Decision Maker</p>
-        <p>Recent Masters in Engineering Management Graduate from Stevens Institute of Technology</p>
+        <p>Project Manager - E-Commerce Growth at Bellevue Parfums | Recent Masters in Engineering Management Graduate from Stevens Institute of Technology</p>
         <p>Jersey City, New Jersey, United States</p>
     </header>
     <!-- Project Research Document -->
@@ -173,6 +173,43 @@ html {
         <p>The Farm-to-Table Platform is a groundbreaking initiative designed to revolutionize the agricultural and food distribution landscape in India. With a comprehensive approach aimed at addressing the challenges faced by farmers and enhancing food quality for consumers, the platform offers a holistic solution to bridge the gap between producers and consumers.</p>
         <p><a href="https://www.councilonsustainabledevelopment.org/post/farm-to-table-empowering-farmers-enriching-tables-a-product-requirement-document" target="_blank">Read the full project research document</a></p>
     </section>
+    <section id="project-videos">
+    <h2>Video Projects</h2>
+
+    <!-- First Video Project -->
+    <div class="project-video">
+        <h3>Project 1 - Influencer Campaign Highlights</h3>
+        <p>This project showcases a highlight from my influencer-driven campaigns that I directed and shot, focusing on increasing brand engagement and social media reach for ARLYN which is a brand of Bellevue Parfums.</p>
+        <video width="600" controls>
+            <source src="export_1729551941169.MOV" type="video/mp4">
+            Your browser does not support the video tag.
+            <p><a href="https://youtu.be/Hkr7YQtjLK0?si=H0Fcf8YIKZOBVrC7" target="_blank">CLick here to find the entire video!</a></p>
+        </video>
+    </div>
+
+    <!-- Second Video Project -->
+    <div class="project-video">
+        <h3>Project 2 - Social Media Content Creation for Beauty Products</h3>
+        <p>Here’s a sample of creative content I directed and shot, aimed at enhancing the visual appeal of beauty products for Jean Rish which is another brand of Bellevue Parfums for digital marketing strategies.</p>
+        <video width="600" controls>
+            <source src="export_1729553183060.MOV" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+<!--    &lt;!&ndash; Third Video Project &ndash;&gt;-->
+<!--    <div class="project-video">-->
+<!--        <h3>Project 3 - Product Launch Campaign Video</h3>-->
+<!--        <p>A product launch video I directed and filmed, designed to showcase the unique selling points of a new product line for Bellevue Parfums.</p>-->
+<!--        <video width="600" controls>-->
+<!--            <source src="path-to-your-video3.mp4" type="video/mp4">-->
+<!--            Your browser does not support the video tag.-->
+<!--        </video>-->
+<!--    </div>-->
+
+    <!-- Add more video projects as needed -->
+</section>
+
    <!-- Project Results - Video -->
     <section id="project-results">
         <h2>Project - Shape Shooter Game</h2>
