--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ html {
 
     <!-- First Video Project -->
     <div class="project-video">
-        <h3>Project 1 - Influencer Campaign Highlights</h3>
+        <h3>Video Creation Project 1 - Influencer Campaign Highlights</h3>
         <p>This project showcases a highlight from my influencer-driven campaigns that I directed and shot, focusing on increasing brand engagement and social media reach for ARLYN which is a brand of Bellevue Parfums.</p>
         <video width="600" controls>
             <source src="export_1729551941169.MOV" type="video/mp4">
@@ -189,7 +189,7 @@ html {
 
     <!-- Second Video Project -->
     <div class="project-video">
-        <h3>Project 2 - Social Media Content Creation for Beauty Products</h3>
+        <h3>Video Creation Project 2 - Social Media Content Creation for Beauty Products</h3>
         <p>Here’s a sample of creative content I directed and shot, aimed at enhancing the visual appeal of beauty products for Jean Rish which is another brand of Bellevue Parfums for digital marketing strategies.</p>
         <video width="600" controls>
             <source src="export_1729553183060.MOV" type="video/mp4">
